--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -23,9 +24,14 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "angularx-qrcode": "^2.3.4",
+    "ngx-socket-io": "^3.0.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "robotjs": "^0.6.0",
+    "socket.io": "^2.3.0"
+    
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.5",
@@ -48,7 +54,9 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "electron": "^9.0.5",
+    "electron-rebuild": "^1.11.0"
   },
   "description": "An Ionic project"
 }
