--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "run": "ng build && electron .",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -31,7 +32,6 @@
     "zone.js": "~0.10.2",
     "robotjs": "^0.6.0",
     "socket.io": "^2.3.0"
-    
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.5",
